# cookiecutter-hatch-best-practices

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.__project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}
{{cookiecutter.__project_slug}}/docs/: changelog.md  conf.py  index.md  reference.md  usage.md
{{cookiecutter.__project_slug}}/tests/: __init__.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__package_name}}/: __about__.py  __init__.py  {% if cookiecutter.use_cli -%} __main__.py {%- endif %}
{{cookiecutter.__project_slug}}/{{cookiecutter.__package_name}}/cli/: __init__.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__package_name}}/{% if cookiecutter.use_cli -%} cli {%- endif %}/: __init__.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/{% if cookiecutter.use_ci -%} .github {%- endif %}/workflows/: test.yml
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: {% if cookiecutter.use_cli -%} __main__.py {%- endif %}
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/{% if cookiecutter.use_cli -%} cli {%- endif %}/: __init__.py
