[build-system]
requires = ["hatchling"{%- if cookiecutter.tag_on_version_bump == "y" -%}, "hatch-regex-commit"{%- endif -%}]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
description = '{{cookiecutter.desctiption}}'
readme = "README.md"
requires-python = ">=3.7"
license = "{{cookiecutter.license}}"
keywords = []
authors = [
  { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [{%- if cookiecutter.use_cli == "y" -%}"click"{%- endif -%}]
dynamic = ["version"]

  [project.urls]
  Documentation = "https://github.com/myusername/{{ cookiecutter.project_name }}#readme"
  Source = "https://github.com/myusername/{{ cookiecutter.project_name }}"

  {% if cookiecutter.use_cli == "y" -%}
  [project.scripts]
  {{cookiecutter.project_name}} = "{{cookiecutter.__package_name}}.cli:{{cookiecutter.__package_name}}"
  {%- endif %}

[tool.hatch.version]
{% if cookiecutter.tag_on_version_bump == "y" -%}
source = "regex_commit"
tag_sign = false
{% endif -%}
path = "{{ cookiecutter.__package_path }}/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist",
  "pytest-randomly",
  "pytest-rerunfailures"
]
  [tool.hatch.envs.default.scripts]
  full = "pytest -n auto --reruns 5 --reruns-delay 3 -r aR --cov-report=term-missing --cov-config=pyproject.toml --cov={{ cookiecutter.__package_path }} {args:tests}"
  dev = "pytest -p no:randomly --no-cov {args:tests}"

{% if cookiecutter.sphinx_docs == "y" -%}
[tool.hatch.envs.docs]
template = "docs"
dependencies = [
  "sphinx",
  "myst-parser",
  "furo"
  {%- if cookiecutter.use_cli == "y" -%},
  "sphinx-click"
  {%- endif %}
]
  [tool.hatch.envs.docs.scripts]
  clean = "rm -r docs/_build"
  html = "sphinx-build -b html docs docs/_build/html"
  preview = [
    "html",
    "{{cookiecutter.docs_preview_browser}} docs/_build/html/index.html"
  ]
{%- endif %}

[tool.hatch.envs.test.overrides]
env.HERMETIC_TESTS.type = [
  { value = "container", if = ["true"] },
  "virtual",
]
env.HERMETIC_TESTS.image = { value = "python:{version}", if = ["true"] }
[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.hatch.envs.lint]
detached = false
extra-dependencies = [
  "flake8>=5.0.0",
  "flake8-bandit>=2.1.2",
  "flake8-black>=0.3.0",
  "flake8-bugbear>=22.7.1",
  "flake8-docstrings>=1.6.0",
  "flake8-isort",
  "flake8-tidy-imports>=4.8.0",
  "mypy>=0.971",
  "pre-commit>=2.16.0",
  "pre-commit-hooks>=4.1.0"
]
  [tool.hatch.envs.lint.scripts]
  typing = "mypy --install-types --non-interactive {args:{{ cookiecutter.__package_path }} tests}"
  style = [
    "flake8 {args:{{cookiecutter.__package_path}} tests}"
  ]
  fmt = [
    "isort {args:.}",
    "black {args:.}",
    "style",
  ]
  all = [
    "fmt",
    "typing",
  ]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
line_length = 120
skip_gitignore = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "{{ cookiecutter.__package_path }}/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
