[build-system]
requires = ["hatchling", "hatch-containers"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
description = '{{cookiecutter.desctiption}}'
readme = "README.md"
requires-python = ">=3.7"
license = ""
keywords = []
authors = [
  { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

  [project.urls]
  Documentation = "https://github.com/myusername/{{ cookiecutter.project_name }}#readme"
  Source = "https://github.com/myusername/{{ cookiecutter.project_name }}"

  [project.scripts]
  {{cookiecutter.project_name}} = "{{cookiecutter.__package_name}}.cli:{{cookiecutter.__package_name}}"

[tool.hatch.version]
path = "{{ cookiecutter.__package_name }}/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-randomly",
  "pytest-rerunfailures"
]
  [tool.hatch.envs.default.scripts]
  full = "pytest -n auto --reruns 5 --reruns-delay 3 -r aR --cov-report=term-missing --cov-config=pyproject.toml --cov={{ cookiecutter.__package_name }} {args:tests}"
  dev = "pytest -p no:randomly --no-cov {args:tests}"

[[tool.hatch.envs.test.matrix]]
type = "container"
python = ["37", "38", "39", "310", "311"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "bandit>=1.7.4",
  "black>=22.6.0",
  "flake8>=5.0.0",
  "flake8-bugbear>=22.7.1",
  "flake8-docstrings>=1.6.0",
  "flake8-quotes>=3.3.1",
  "flake8-tidy-imports>=4.8.0",
  "isort>=5.10.1",
  "mypy>=0.971",
]
  [tool.hatch.envs.lint.scripts]
  typing = "mypy --install-types --non-interactive {args:{{ cookiecutter.__package_name }} tests}"
  security = "bandit --quiet {args:.}"
  style = [
    "flake8 {args:.}",
    "black --check --diff {args:.}",
    "isort --check-only --diff {args:.}",
  ]
  fmt = [
    "isort {args:.}",
    "black {args:.}",
    "style",
  ]
  all = [
    "style",
    "typing",
    "security",
  ]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.bandit]
recursive = true
  [tool.bandit.try_except_pass]
  check_typed_exception = false

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "{%- if cookiecutter.src_layout -%}src/{%- endif -%}{{ cookiecutter.__package_name }}/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


